# NotYetSelfAware

./: .env  .gitignore  README.md  Readme.md  main.py  maths.md  requirements.txt  setup.cfg  workspace.code-workspace
src/: evaluation.py  hp_search.py  predict.py  test_perfs.py  train.py
src/NotYetSelfAware/: __init__.py  __main__.py  config.py  model.py  visualize.py
src/NotYetSelfAware/activations/: ReLU.py
src/NotYetSelfAware/cost/: BinaryCrossEntropy.py  CrossEntropy.py  __init__.py  base.py  binary_cross_entropy.py
src/NotYetSelfAware/datasets/: __init__.py  datasets.py
src/NotYetSelfAware/datasets/MLP/: min.csv
src/NotYetSelfAware/datasets/cache/: hp_save.json
src/NotYetSelfAware/layers/: BatchNorm.py  __init__.py  base.py  dense.py  hard_coded.py  output.py
src/NotYetSelfAware/layers/activations/: LU.py  ReLU.py  __init__.py  base.py  leakyReLU.py  reLU.py  sigmoid.py  softmax.py  tanh.py
src/NotYetSelfAware/layers/cost/: binary_cross_entropy.py
src/NotYetSelfAware/layers/preprocessing/: __init__.py  standardize.py
src/NotYetSelfAware/optimizers/: RMSprop.py  StochasticGradientDescent.py  __init__.py  adam.py  base.py  momentum.py
src/NotYetSelfAware/preprocessing/: standardize.py
src/NotYetSelfAware/regularizations/: L2.py
src/NotYetSelfAware/validation/: accuracy.py
