[metadata]
name = NotYetSelfAware
version = 0.0.3
author = ezalos
author_email = ezalos@gmail.com
description = My implementation of Neaural Networks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ezalos/NotYetSelfAware
project_urls =
    Bug Tracker = https://github.com/ezalos/NotYetSelfAware/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src